--- a/app/src/main/res/layout/activity_cadastro_livro.xml
+++ b/app/src/main/res/layout/activity_cadastro_livro.xml
@@ -101,7 +101,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Salvar"
+        android:text="@string/buttonSalvar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnTipo" />
